<resources>
    <string name="app_name" translatable="false">Orefoo</string>
    <string name="facebook_app_id" translatable="false">720537655462641</string>
    <string name="fb_login_protocol_scheme">fb720537655462641</string>

    <string name="payment_through_momo">"Thanh toán"</string>
    <string name="payment_momo">"Thanh toán qua MoMo"</string>
    <string name="not_receive_info">"Không nhận được thông tin"</string>
    <string name="not_receive_info_err">"Không gởi được yêu cầu vui lòng kiểm tra lại"</string>
    <string name="searchbar">Tìm món ăn, quán ăn,…</string>
    <string name="orders">Đơn hàng</string>
    <string name="me">Tôi</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="logout">Đăng xuất</string>
    <string name="or">Hoặc</string>
    <string name="payment">Thanh toán</string>
    <string name="address">Địa chỉ</string>
    <string name="orefoo_email" translatable="false">orefoo@gmail.com</string>
    <string name="orefoo_password" translatable="false">orefoo</string>
    <string name="firebase_path" translatable="false">location</string>
    <string name="large_text" translatable="false">Material is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the best Material is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable syMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the bestMaterial is an adaptable system of guidelines, components, and tools that support the best practices of user interface design. END</string>
    <string name="titleCategories">CHỌN THEO THỂ LOẠI</string>
    <string name="seemore">Xem thêm</string>
    <string name="mainmeal">Bữa ăn chính</string>
    <string name="snacks">Ăn vặt</string>
    <string name="drinks">Đồ uống</string>
    <string name="trasua">Trà sữa</string>
    <string name="burgers">Burger</string>
    <string name="titleNearby">GẦN BẠN</string>
    <string name="titleFavourite">YÊU THÍCH</string>
    <string name="ongoing">Đang đến</string>
    <string name="history">Lịch sử</string>
    <string name="setting">Cài đặt</string>
    <string name="about">Thông tin về Orefoo</string>
    <string name="appversion">Phiên bản 1.0.0</string>
    <string name="managerprofile">Quản lý hồ sơ</string>
    <string name="exit_confirm">Nhấn BACK lần nữa để thoát…</string>
    <string name="delivery_address">Địa chỉ giao hàng</string>
    <string name="cancel">Hủy</string>
    <string name="find_address">Tìm địa chỉ…</string>
    <string name="check_internet_connection">Vui lòng kiểm tra kết nối internet!</string>
    <string name="delivery_here">Giao hàng ở đây</string>
    <string name="choose_delivery_location">Chọn vị trí giao hàng</string>
    <string name="connection_lost">Mất kết nối!</string>
    <string name="gotoregister">Đăng ký tài khoản</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên tài khoản</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="gotologin">Quay lại đăng nhập</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="edit">Sửa</string>
    <string name="name">Tên</string>
    <string name="phonenumber">Số điện thoại</string>
    <string name="empty" translatable="false">empty</string>
    <string name="info_and_contact"><![CDATA[Thông tin & Liên hệ]]></string>
    <string name="gender">Giới tính</string>
    <string name="dob">Ngày sinh</string>
    <string name="security">Bảo mật</string>
    <string name="last_name">Họ</string>
    <string name="save">Lưu</string>
    <string name="date_invalid">Ngày sinh sai định dạng!</string>
    <string name="update_success">Cập nhật thông tin thành công!</string>
    <string name="update_failed">Cập nhật thông tin thất bại!</string>
    <string name="socket_timeout">Kết nối không ổn định, thử lại sau!</string>
    <string name="signup_success">Đăng ký thành công!</string>
    <string name="account_exist">Tài khoản đã tồn tại!</string>
    <string name="signup_failed">Đăng ký thất bại!</string>
    <string name="incorrect_password">Mật khẩu không chính xác!</string>
    <string name="incorrect_username_password">Sai tên tài khoản hoặc mật khẩu!</string>
    <string name="login_failed">Đăng nhập thất bại!</string>
    <string name="login_success">Đăng nhập thành công!</string>
    <string name="logout_success">Đã đăng xuất!</string>
    <string name="conflict_phone">Số điện thoại đã được sử dụng!</string>
    <string name="conflict_email">Email đã được sử dụng!</string>
    <string name="no_permission">Bạn không có quyền truy cập</string>
    <string name="info">Thông tin</string>
    <string name="comment">Bình luận</string>
    <string name="titleSuggest">GỢI Ý CHO BẠN</string>
    <string name="checkout">Đặt món</string>
    <string name="confirm_orders">Xác nhận đơn hàng</string>
    <string name="delivery">Giao hàng</string>
    <string name="cash">Tiền mặt</string>
    <string name="cart">Giỏ hàng</string>
    <string name="difference_branch_message">Nếu bạn đồng ý đổi cửa hàng, giỏ hàng hiện tại sẽ được dọn dẹp để thêm món mới.</string>
    <string name="too_far">Khoảng cách quá xa</string>
    <string name="difference_branch_title">Khác cửa hàng</string>
    <string name="yes">Đồng ý</string>
    <string name="see_cart">Xem giỏ hàng</string>
    <string name="close">Đóng</string>
    <string name="ok" translatable="false">OK</string>
    <string name="too_far_message">Để đảm bảo chất lượng sản phẩm, chúng tôi không hổ trợ giao hàng trên 10km. Cảm ơn bạn đã sử dụng Orefoo.</string>
    <string name="add">Thêm</string>
    <string name="sum">Tổng</string>
    <string name="total">Thành tiền</string>
    <string name="shipping_fee">Phí giao hàng</string>
    <string name="portion">phần</string>
    <string name="cart_empty">Giỏ hàng trống</string>
    <string name="confirm_order">Xác nhận đặt hàng</string>
    <string name="order_success">Đặng hàng thành công</string>
    <string name="order_failed">Đặt hàng không thành công</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="order_at">"Đặt hàng lúc: "</string>
    <string name="dish">món</string>
    <string name="track_order">Theo dõi đơn hàng</string>
    <string name="error">lỗi</string>
    <string name="io_exception" translatable="false">IOException</string>
    <string name="edit_address"><![CDATA[Sửa đổi địa chỉ & Liên hệ]]></string>
    <string name="hint_building_floor_number">Tòa nhà, số tầng, tên đường…</string>
    <string name="hint_gate">Cổng</string>
    <string name="contact_info">Thông tin liên hệ</string>
    <string name="change_branch">Đổi cửa hàng</string>
    <string name="no_update">Chưa cập nhật</string>
    <string name="invalid_qr_code">Không phải QR của Orefoo</string>
    <string name="accepted">Shipper đã nhận đơn</string>
    <string name="picked">Đang giao</string>
    <string name="success">Đã giao</string>
    <string name="ordered">Đang chờ Shipper</string>
    <string name="consumer_canceled">Bạn đã hủy đơn</string>
    <string name="merchant_canceled">Cửa hàng đã hủy đơn</string>
    <string name="shipper_canceled">Shipper đã hủy đơn</string>
    <string name="cannot_open_link">Không thể mở liên kết.</string>
    <string name="pick_image_intent_text">Chọn ảnh</string>
    <string name="password_not_match">Mật khẩu không khớp</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="change">Thay đổi</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="change_password_failed">Đổi mật khẩu thất bại</string>
    <string name="must_fill">Không được để trống</string>
    <string name="old_password_incorrect">Mật khẩu cũ chưa chính xác</string>
    <string name="token_expired" translatable="false">Token expired, Login again!</string>
    <string name="not_open_for_sale">CHƯA MỞ BÁN</string>
    <string name="temp_close">TẠM ĐÓNG</string>
</resources>