<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/extra_light_gray"
    tools:context=".ChangePasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAppBar">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/change_password"
            app:titleTextColor="#FFFFFF"
            android:id="@+id/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/layoutAppBar"
        android:id="@+id/layoutProgressBar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/oldPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/oldPassword"
            android:id="@+id/etOldPassword"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:background="@drawable/bg_edittext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/etOldPassword"
            android:id="@+id/newPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/newPassword"
            android:id="@+id/etNewPassword"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:imeOptions="actionNext"
            android:background="@drawable/bg_edittext"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_new_password"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/etNewPassword"
            android:id="@+id/confirmNewPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/confirmNewPassword"
            android:id="@+id/etConfirmNewPassword"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:background="@drawable/bg_edittext"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_btn_filled"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnChange"/>
    </RelativeLayout>
</RelativeLayout>