<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="@color/extra_light_gray"
    android:id="@+id/layoutProgressBar">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAppBar">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/managerprofile"
            app:titleTextColor="#FFFFFF"
            android:id="@+id/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layoutAppBar"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardViewInfo"
            app:strokeWidth="1dp"
            app:strokeColor="@color/extra_light_gray">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/info_and_contact"
                        android:padding="8dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentStart="true"
                        android:textAppearance="?attr/textAppearanceHeadline6" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:id="@+id/tvEdit"
                        android:text="@string/edit"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_alignParentEnd="true"
                        android:textSize="16sp"
                        android:paddingEnd="10dp"/>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/layoutNearby">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/tvUsername"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/empty"
                            android:layout_centerVertical="true"
                            android:id="@+id/tvUsername"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phonenumber"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/tvPhoneNumber"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/empty"
                            android:layout_centerVertical="true"
                            android:id="@+id/tvPhoneNumber"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/tvName"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/empty"
                            android:layout_centerVertical="true"
                            android:id="@+id/tvName"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Email"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/tvEmail"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/empty"
                            android:layout_centerVertical="true"
                            android:id="@+id/tvEmail"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/tvGender"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/empty"
                            android:layout_centerVertical="true"
                            android:id="@+id/tvGender"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dob"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/tvDoB"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/empty"
                            android:layout_centerVertical="true"
                            android:id="@+id/tvDoB"
                            android:textSize="18sp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardViewSecurity"
            app:strokeWidth="1dp"
            app:strokeColor="@color/extra_light_gray"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/security"
                        android:padding="8dp"
                        android:gravity="center_vertical"
                        android:layout_alignParentStart="true"
                        android:textAppearance="?attr/textAppearanceHeadline6" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textSize="20sp"
                            android:textColor="#000000"
                            android:layout_alignParentStart="true"
                            app:drawableEndCompat="@drawable/ic_arrow_right"
                            android:id="@+id/tvPassword"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</RelativeLayout>